mail fix in contact page and pop alignment

--- a/css/custom.css
+++ b/css/custom.css
@@ -178,7 +178,7 @@ p#serviceControl
   display: block;
  } */
 .popup {
-	margin: 30px auto;
+	/* margin: 30px auto; */
 	padding: 15px;
 	border-radius: 5px;
 	width: 49%;
@@ -242,10 +242,10 @@ p#serviceControl
 }
 .popup {
 	width: 70%;
-	left:20%;
+	left:15%;
 }
 .div1 {
-	width: 70%;
+	width: 100%;
 	padding: 20px;
 	float: left;
 }
